--- a/src/index.css
+++ b/src/index.css
@@ -28,13 +28,14 @@ body{
 }
 
 .header {
-    box-shadow: 0 1px 0 rgba(12,13,14,0.1), 0 1px 6px rgba(44, 5, 136, 0.1);
-    top: -2.5%;
+    box-shadow: 0 2px 0 rgba(12,13,14,0.1), 0 2px 6px rgba(44, 5, 136, 0.1);
+    /* top: -2.5%; */
     border-top: 5px #0096fa;
     width: 100%;
     margin: 0 auto;
     background-color: rgb(255, 255, 255);
-    position: static;
+    position: fixed;
+    z-index: 99;
 }
 
 .footer {
@@ -80,6 +81,7 @@ body{
     background-color: white;
     border: 0.5px lightgray solid;
     border-radius: 5px;
+    margin-top: 15px;
     padding: 5px;
     padding-top: 10px;
 }
@@ -109,35 +111,56 @@ body{
 .ui_middlepad{
     float: left;
     margin: 10px;
-    width: 740px;
+    width: 980px;
 }
 
 .ui_right {
     float: left;
     margin: 10px;
-    width: 180px;
+    margin-left: 30px;
+    width: 190px;
 }
 
 .page {
     word-wrap: break-word;
     width: 1000px;
     margin: 0 auto;
+    padding-top: 80px;
 }
 
 .link {
-  color: black;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    color: black;
 }
 
 .link:hover {
-   color: black
+   color: black;
+   font-size: 1.08em;
 }
 
 .otherlink {
     color: rgb(253, 129, 68);
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
 }
 
 .otherlink:hover {
-    color: black
+    color: black;
+    font-size: 1.08em;
+}
+
+.socialImage {
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    height: 20px;
+}
+
+.socialImage:hover {
+    height: 24px;
 }
 
 .profile {
